--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^1.0.1
   qr_flutter: ^4.0.0
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
