--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   qr_flutter: ^4.0.0
   flutter_slidable: ^2.0.0
+  hooks_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
