--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,15 @@ dependencies:
   flutter_slidable: ^2.0.0
   hooks_riverpod: ^2.1.1
   uuid: ^3.0.7
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  freezed: ^2.3.2
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.3
 flutter:
   uses-material-design: true
 
