--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   hooks_riverpod: ^2.1.1
   uuid: ^3.0.7
   freezed_annotation: ^2.2.0
+  riverpod: ^2.1.3
+  riverpod_annotation: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +27,7 @@ dev_dependencies:
   freezed: ^2.3.2
   json_serializable: ^6.5.4
   build_runner: ^2.3.3
+  riverpod_generator: ^1.1.1
 flutter:
   uses-material-design: true
 
