--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   riverpod: ^2.3.5
   riverpod_annotation: ^2.0.4
+  auto_route: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   build_runner: ^2.3.3
   riverpod_generator: ^2.2.0
+  auto_route_generator: ^6.2.0
 flutter:
   uses-material-design: true
 
