--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,10 @@ version: 2
 updates:
   - package-ecosystem: "pub" # See documentation for possible values
     directory: "/" # Location of package manifests
+    assignees:
+      - blck-snwmn
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     groups:
       dependencies:
         patterns:
